add second page

--- a/src/main.html
+++ b/src/main.html
@@ -11,6 +11,6 @@
       <span data-shadow-text="Text-Shadow">emlgaming</span>
       <br>working on it..
     </h1>
-        <div class="text-center col-xs-4 col-xs-offset-4"> <a href="main.html" class="btn btn-xs animated-button victoria-one">Get started</a></div>
+        <div class="text-center col-xs-4 col-xs-offset-4"> <a href="https://github.com/EMLGaming" class="btn btn-xs animated-button victoria-one">Get started</a></div>
   </body>
 </html>
