--- a/src/main.html
+++ b/src/main.html
@@ -7,10 +7,10 @@
   </head>
   <body>
 
-    <h1>made by<br>
-      <span data-shadow-text="Text-Shadow">emlgaming</span>
-      <br>working on it..
+    <h1>we are actually<br>
+      <span data-shadow-text="Text-Shadow">getting somewhere</span>
+      <br>still working on it..
     </h1>
-        <div class="text-center col-xs-4 col-xs-offset-4"> <a href="https://github.com/EMLGaming" class="btn btn-xs animated-button victoria-one">Get started</a></div>
+        <div class="text-center col-xs-4 col-xs-offset-4"> <a href="https://github.com/EMLGaming" class="btn btn-xs animated-button victoria-one">Github.com</a></div>
   </body>
 </html>
