finally have an idea

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
     <h1>made by<br>
       <span data-shadow-text="Text-Shadow">emlgaming</span>
-      <br>working on it..
+      <br>My favorite sites
     </h1>
         <div class="text-center col-xs-4 col-xs-offset-4"> <a href="main.html" class="btn btn-xs animated-button victoria-one">Get started</a></div>
   </body>
