file system update

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Made by EMLGaming</title>
-    <link rel="stylesheet" href="../src/index.css">
+    <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
 
