--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
-
     <h1>made by<br>
       <span data-shadow-text="Text-Shadow">emlgaming</span>
       <br>My favorite sites
     </h1>
-        <div class="text-center col-xs-4 col-xs-offset-4"> <a href="main.html" class="btn btn-xs animated-button victoria-one">Get started</a></div>
+    <div class="text-center col-xs-4 col-xs-offset-4">
+      <a href="main.html" class="btn btn-xs animated-button victoria-one">Get started</a>
+    </div>
   </body>
 </html>
