--- a/src/html/main.html
+++ b/src/html/main.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-
     <h1>These are my<br>
       <span data-shadow-text="Text-Shadow">favorite sites</span>
       <br>still working on it..
     </h1>
 
-
-        <div class="text-center col-xs-4 col-xs-offset-4"> <a href="index.html" class="btn btn-xs animated-button victoria-one">Back</a></div>
+    <div class="text-center col-xs-4 col-xs-offset-4">
+      <a href="index.html" class="btn btn-xs animated-button victoria-one">Back</a>
+    </div>
   </body>
 </html>
