--- a/src/html/main.html
+++ b/src/html/main.html
@@ -8,10 +8,30 @@
 </head>
 
 <body>
-  <h1>These are my<br>
+
+  <div class="hope">
+    <svg viewBox="0 0 600 300">
+
+    <symbol id="s-text">
+      <text text-anchor="middle"
+            x="50%" y="10%" dy="100px">
+        DAMN SEXY
+      </text>
+    </symbol>
+
+    <use xlink:href="#s-text" class="text"></use>
+    <use xlink:href="#s-text" class="text"></use>
+    <use xlink:href="#s-text" class="text"></use>
+    <use xlink:href="#s-text" class="text"></use>
+    <use xlink:href="#s-text" class="text"></use>
+
+  </svg>
+  </div>
+
+  <!--<h1>These are my<br>
       <span data-shadow-text="Text-Shadow">favorite sites</span>
       <br>still working on it..
-    </h1>
+    </h1>-->
 
   <div class="text-center col-xs-4 col-xs-offset-4">
     <a href="index.html" class="btn btn-xs animated-button victoria-one">Back</a>
