--- a/src/html/main.html
+++ b/src/html/main.html
@@ -15,7 +15,7 @@
     <symbol id="s-text">
       <text text-anchor="middle"
             x="50%" y="10%" dy="100px">
-        STINKHOER
+        AWESOME
       </text>
     </symbol>
 
